[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiderfoot"
version = "4.1.0"
description = "SpiderFoot: Open Source Intelligence Automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Steve Micallef", email = "steve@binarypool.com" },
]

dependencies = [
    "adblockparser>=0.7,<1",
    "dnspython>=2.3.0,<3",
    "ExifRead>=2.3.2,<3",
    "CherryPy>=18.8.0,<19",
    "cherrypy-cors>=1.6,<2",
    "Mako>=1.2.4,<2",
    "beautifulsoup4>=4.11.2,<5",
    "lxml>=4.9.2",
    "netaddr>=0.8.0,<1",
    "pysocks>=1.7.1,<2",
    "requests>=2.28.2,<3",
    "ipwhois>=1.1.0,<1.2.0",
    "ipaddr>=2.2.0,<3",
    "phonenumbers>=8.13.6,<9",
    "pygexf>=0.2.2,<0.3",
    "PyPDF2>=1.28.6,<2",
    "python-whois>=0.7.3",
    "secure>=0.3.0",
    "pyOpenSSL>=21.0.0",
    "python-docx>=0.8.11,<0.9",
    "python-pptx>=0.6.21,<0.7",
    "networkx>=2.6.3",
    "cryptography>=3.4.8",
    "publicsuffixlist>=0.9.3",
    "openpyxl>=3.1.1,<4",
    "pyyaml>=6.0.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-mock",
    "flake8",
]

[project.scripts]
spiderfoot = "sf:main"

[tool.setuptools]
py-modules = ["sf", "sflib", "sfscan", "sfwebui", "sfcli"]
packages = ["spiderfoot", "modules"]

[tool.setuptools.package-data]
spiderfoot = ["static/**/*", "templates/**/*", "dicts/**/*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
