[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiderfoot"
version = "4.1.0"
description = "SpiderFoot: Open Source Intelligence Automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Steve Micallef", email = "steve@binarypool.com" },
]

dependencies = [
    "adblockparser>=0.7,<1",
    "dnspython>=2.3.0,<3",
    "ExifRead>=2.3.2,<3",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "beautifulsoup4>=4.11.2,<5",
    "lxml>=4.9.2",
    "netaddr>=0.8.0,<1",
    "pysocks>=1.7.1,<2",
    "requests>=2.28.2,<3",
    "ipwhois>=1.1.0,<1.2.0",  # archived/unmaintained, no replacement yet
    "phonenumbers>=8.13.6,<9",
    "pygexf>=0.2.2,<0.3",
    "pypdf>=3.0.0,<5",
    "python-whois>=0.7.3",
    "secure>=1.0.0",
    "pyOpenSSL>=21.0.0",
    "python-docx>=0.8.11,<2",
    "python-pptx>=0.6.21,<2",
    "networkx>=2.6.3",
    "cryptography>=3.4.8",
    "publicsuffixlist>=0.9.3",
    "openpyxl>=3.1.1,<4",
    "pyyaml>=6.0.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.1",
    "pytest-xdist>=3.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.22.0",
    "flake8==7.3.0",
    "pydoclint>=0.3.0",
    "dlint==0.14.0",
    "flake8-annotations==2.9.1",
    "flake8-blind-except==0.2.1",
    "flake8-bugbear>=23.2.13",
    "flake8-builtins==2.1.0",
    "flake8-quotes==3.3.2",
    "flake8-return==1.2.0",
    "flake8-sfs==0.0.4",
    "flake8-simplify>=0.19.3",
    "pycodestyle>=2.9.0",
    "httpx>=0.24.0",
]

[project.scripts]
spiderfoot = "sf:main"

[tool.setuptools]
py-modules = ["sf", "sflib", "sfscan", "sfwebui", "sfcli"]
packages = ["spiderfoot", "modules"]

[tool.setuptools.package-data]
spiderfoot = ["static/**/*", "templates/**/*", "dicts/**/*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
